Remove splash links, make splash image render from CSS, fix sidebar collapse, add sidebar formatting

--- a/app/assets/stylesheets/components/_main.scss
+++ b/app/assets/stylesheets/components/_main.scss
@@ -2,7 +2,7 @@
 
 $header-height   : 60px;
 $sidebar-padding : 15px;
-$sidebar-width   : 350px;
+$sidebar-width   : 360px;
 // $mainbox-width: 100%;
 $mainbox-width   : calc(100vw - #{$sidebar-width});
 $main-padding-top: 15px;
