--- a/app/assets/stylesheets/components/sidebar/_sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/_sidebar.scss
@@ -1,22 +1,22 @@
 // Sidebar
 #sidebar {
-  display                  : flex;
-  flex-direction           : column;
-  height                   : 100%;
-  background-color         : $background;
-  padding-top              : $main-padding-top;
-  padding-left             : 15px;
-  padding-right            : 15px;
+  display               : flex;
+  flex-direction        : column;
+  height                : 100%;
+  background-color      : $background;
+  padding-top           : $main-padding-top;
+  padding-left          : 15px;
+  padding-right         : 15px;
   // flex               : 0 1 auto;
-  color                    : $gray;
-  font-family              : $font-other;
+  color                 : $gray;
+  font-family           : $font-other;
   // Keep position fixed to side (also adjust mainbox left margin)
   // position: sticky;
-  width                    : $sidebar-width;
-  // box-sizing            : border-box;
-  box-shadow               : 0 0 25px $lighter-gray;
-  transition               : all 0.3s ease 0s;
-  z-index                  : 1;
+  width                 : $sidebar-width;
+  box-sizing            : border-box; // best for collapsing
+  box-shadow            : 0 0 25px $lighter-gray;
+  transition            : all 0.3s ease 0s;
+  z-index               : 1;
 
   // a:not(#sidebar-logo) {
   //   &:hover {
@@ -25,9 +25,10 @@
   // }
 
   &.collapsed {
-    width   : 0;
-    overflow: hidden;
-    opacity : 0.0;
+    // width   : 0;
+    // overflow: hidden;
+    // opacity : 0.0;
+    margin-left: -$sidebar-width;
   }
 }
 
@@ -86,6 +87,7 @@ button.collapsed {
   display       : flex;
   flex-direction: column;
   width         : 100%;
+  padding       : 20px 0;
 
   a {
     padding       : 10px $sidebar-padding;
@@ -152,13 +154,17 @@ button.collapsed {
 }
 
 .sidebar-workspace-title {
-  height     : 20px;
-  font-size  : 18px;
-  font-family: $font-heading;
-  color      : $darkgray;
-  padding    : 6px 5px;
-  overflow   : hidden;
-  transition : all 0.3s ease 0s;
+  // height     : 20px;
+  // height     : 100%;
+  max-width    : 220px;
+  font-size    : 18px;
+  font-family  : $font-heading;
+  color        : $darkgray;
+  padding      : 6px 5px;
+  overflow     : hidden;
+  text-overflow: ellipsis;
+  white-space  : nowrap;
+  transition   : all 0.3s ease 0s;
 
   &:hover {
     color       : $primary;
@@ -190,6 +196,15 @@ button.collapsed {
   &:hover {
     filter             : invert(0%) sepia(100%) saturate(3227%) hue-rotate(173deg) brightness(92%) contrast(96%);
     // background-color: $lightest-gray;
+  }
+
+  &:active {
+    -webkit-transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    -moz-transform   : rotate(270deg);
+    -o-transform     : rotate(270deg);
+    -ms-transform    : rotate(270deg);
+    transform        : rotate(270deg);
   }
 }
 
